# enlightenedc

./: .clang-format  .clang-tidy  .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  Doxyfile  LICENSE  README.md  ROADMAP.md  build.py  build.sh
doc/: introduction.md
doc/compiler/: 1-contents.md
doc/lang/: 1-contents.md  2-holyc-differences.md  3-primitive-types.md  4-user-types.md
doc/spec/: 1-contents.md
grammars/: enlightenedc.bnf  enlightenedc.ebnf  expressions.yy
include/: config.hpp  ecc.hpp  error.hpp  location.hpp  tokens.hpp  util.hpp
include/ast/: ast.hpp  printer.hpp  visitor.hpp
include/codegen/: compiler.hpp  llvm.hpp
include/codegen/cfg/: builder.hpp  cfg.hpp
include/codegen/lir/: iterator.hpp  lir.hpp  printer.hpp  symbols.hpp  synthesizer.hpp  visitor.hpp
include/driver/: backend.hpp  driver.hpp
include/ds/: linkedlist.hpp
include/eval/: consteval.hpp  evaluator.hpp  value.hpp
include/frontend/: filenames.hpp  frontend.hpp  lexer.hpp  preproc.hpp
include/preproc/: preproc.hpp
include/semantics/: primitives.hpp  printer.hpp  semantics.hpp  semerr.hpp  symbols.hpp  typeerr.hpp  types.hpp  validator.hpp
include/semantics/mir/: mir.hpp  printer.hpp  synthesizer.hpp  visitor.hpp
src/: config.cpp  config.hpp  ecc.cpp  ecc.hpp  error.hpp  main.cpp  tokens.cpp  util.hpp
src/ast/: ast.cpp  ast.hpp  ast_printer.hpp  printer.cpp  printer.hpp  visitor.hpp
src/codegen/: compiler.cpp  compiler.hpp  exec.cpp  exec.hpp  llvm.cpp  llvm.hpp  mir.cpp  mir.hpp  mirPrinter.cpp  mirPrinter.hpp  printer.cpp  value.hpp  visitor.hpp
src/codegen/cfg/: builder.cpp  cfg.cpp
src/codegen/lir/: lir.cpp  lir.hpp  printer.cpp  symbols.cpp  symbols.hpp  synthesizer.cpp  synthesizer.hpp  visitor.hpp
src/compiler/: compiler.cpp  compiler.hpp  elaborator.cpp  elaborator.hpp  semantics.cpp  semantics.hpp  types.cpp  types.hpp
src/driver/: backend.cpp  backend.hpp  driver.cpp  driver.hpp
src/eval/: consteval.cpp  exec.cpp  exec.hpp  value.cpp  value.hpp
src/frontend/: filenames.cpp  frontend.cpp  frontend.hpp  lexer.cpp  lexer.hpp  lexer.l  parser.y  parser.yy  preproc.cpp  tokens.hpp
src/preproc/: preproc.cpp  preproc.hpp
src/semantics/: elaborator.cpp  elaborator.hpp  primitives.cpp  printer.cpp  printer.hpp  semantics.cpp  semantics.hpp  semerr.hpp  symbols.cpp  symbols.hpp  types.cpp  types.hpp  validator.cpp  validator.hpp
src/semantics/mir/: mir.cpp  mir.hpp  printer.cpp  printer.hpp  synthesizer.cpp  synthesizer.hpp  visitor.hpp
src/test/: examples.ec  examples_negative.ec
src/types/: typecheck.cpp  typecheck.hpp
test/: CMakeLists.txt  brainfuck.HC  brainfuck.ec  brainfuck_ast.txt  examples.ec  examples_ast.txt  run_test.py
test/code/input/: control.HC  (+1 more)
test/expected/: literals.HC
test/input/: classes.HC  classes.ec  control.HC  control.ec  declarations.HC  declarations.ec  expressions.HC  expressions.ec  functions.HC  functions.ec  literals.HC  pointers_arrays.HC  pointers_arrays.ec  structs.ec
test/integration/: CMakeLists.txt  brainfuck.HC  brainfuck_ast.txt  test.HC
test/output/: classes_ast.txt  control_ast.txt  declarations_ast.txt  empty_ast.txt  expressions_ast.txt  functions_ast.txt  literals_ast.txt  pointers_arrays_ast.txt  structs_ast.txt
test/unit/: CMakeLists.txt  inheritance_tests.cpp  primhelpers.hpp  primitive_tests.cpp  symboltable_tests.cpp  typesys_symtab_fix.hpp  typesystem_tests.cpp  value_tests.cpp
(+20 files in other folders)
